--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "react-dom": "^17.0.1",
     "react-globe": "^5.0.2",
     "react-scripts": "4.0.1",
+    "three": "^0.124.0",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
